# ctu-fit-bipyt-bonus-tutorial

./: .env  README.md  dockerfile  pyproject.toml
bonus_package/: utils.py
models/: titanic_classification_pipeline.pkl
notebooks/: titanic_modeling.md
webapp/: app.py
